# tcOS

./: .gitignore  ByteBuffer.h  CMakeLists.txt  client.h  main.cpp
.github/workflows/: cmake.yml
client/: ByteBuffer.cpp  ByteBuffer.h  client.cpp  client.h  compression.cpp  compression.h  connection_context.cpp  connection_context.h  pipeline.cpp  pipeline.h
client/encryption/: encryption.cpp  encryption.h
client/graphics/: color.cpp  color.h  slicing.cpp  slicing.h
client/pipeline/: packet_decoder.cpp  packet_decryptor.cpp  packet_defrag.cpp  packet_encoder.cpp  packet_encryptor.cpp  packet_handler.cpp  packet_prefixer.cpp  pipeline.h
client/protocol/: clientbound_con_success.cpp  clientbound_creation_request.cpp  clientbound_destroy.cpp  clientbound_disconnect.cpp  clientbound_encryption.cpp  clientbound_handshake.cpp  clientbound_palette.cpp  clientbound_ping.cpp  clientbound_touch.cpp  packet.cpp  packet.h  protocol.cpp  protocol.h  serverbound_connect.cpp  serverbound_creation_status.cpp  serverbound_encryption.cpp  serverbound_frame.cpp  serverbound_handshake.cpp  serverbound_pong.cpp
common/: file.cpp  file.h  frame_provider.h  graphics.cpp  graphics.h  input_handler.h  io.h  io_factory.h  io_storage.cpp  io_storage.h  thread_safety.cpp  thread_safety.h  timer.cpp  timer.h
graphics/: multisampling.cpp  multisampling.h  native_surface.cpp  pbo_surface.cpp  pbo_surface.h  renderer.h  surface.cpp  surface.h  utils.cpp  utils.h
graphics/internal/: glio.cpp  glio.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h  window.cpp  window.h  window_factory.h
graphics/ui/: cursor.cpp  cursor.h  element.cpp  element.h  std_shaders.cpp  std_shaders.h
input/: input_handler.h
shaders/: cursor.frag  cursor.vert  screenShader.frag  screenShader.vert  shader.frag  shader.vert
shaders/common/: blendDisplay.frag  displayDefault.frag  displayDefault.vert
